Fix : UI Input, Footer UI overflow 현상 CSS 적용

--- a/src/pages/SearchPage/Input/input.module.scss
+++ b/src/pages/SearchPage/Input/input.module.scss
@@ -33,3 +33,9 @@
     border-radius: 0 40px 40px 0;
   }
 }
+
+@media screen and (max-width: 770px) {
+  .inputBox {
+    width: 500px;
+  }
+}
